--- a/css/Style.css
+++ b/css/Style.css
@@ -71,3 +71,73 @@ p{
 a,h3 {
     text-decoration: none;
   }
+/* Design PAGE */
+.Design-tile { 
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto 15px;
+}
+.Design-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+.Design-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+/* Company/Custom Design PAGES */
+
+.Single-Design-tile {
+  margin-bottom: 25px;
+}
+.Single-Design-tile hr {
+  width: 80%;
+}
+.Single-Design-tile .Single-Design-price {
+  font-size: 1.1em;
+  text-align: right;
+  margin-top: -15px;
+  margin-right: -15px;
+}
+.Single-Design-tile .Single-Design-price span {
+  font-size: .6em;
+}
+.Single-Design-photo {
+  position: relative;
+  border: 2px solid #3F0C1F; 
+  overflow: hidden;
+  padding: 0;
+  margin-right: -15px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  max-width: 250px;
+}
+.Single-Design-photo div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  background-color: #557c3e;
+  text-align: center;
+}
+.Single-Design-description {
+  padding-right: 30px;
+}
+h3.Single-Design-title {
+  margin: 0 0 10px;
+}
+.Single-Design-details {
+  font-size: .9em;
+  font-style: italic;
+}
